--- a/styles/style.css
+++ b/styles/style.css
@@ -293,12 +293,13 @@ time {
 
 .about-me-container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   color:white;
   text-align: center;
   flex-direction: column;
+
+  width: fit-content;
 }
 
 .techGrid {
